# udpmonitor

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  pytest.ini  run_production.py  run_production.sh
scripts/: requirements.txt
src/udpmonitor/: __init__.py  rest_api.py  storage.py  udp_listener.py  udpfetch.py
tests/: __init__.py  conftest.py  test_storage.py  test_udp_client.py  test_udpfetch.py
